[package]
name = "aoc-2023"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
clap = { version = "4.4.11", features = ["derive"] }
logos = "0.13.0"
itertools = "0.14.0"
priority-queue = "2.7.0"
ndarray = "0.17.2"
ndarray-linalg = { version = "0.18.1", features = ["openblas"] }
